--- a/index.html
+++ b/index.html
@@ -1,14 +1,79 @@
-<!DOCTYPE html>
-<html> 
+<!DOCTYPE html> 
+<html>
+
 
 <head>
-    <meta charset=utf-8/>
-</head>
 
+    <link rel="stylesheet" href="style.css">
+    <title>hw-04</title>
+</head>
 
 <body>
 
+    <h1 class = 'header'>hw-04: Event Handling</h1>
+
+    <div class="flex-container">
+        <div class = "column" id=column1>
+            <svg id="frame">
+                
+                <!-- 9,9 //-->
+                <circle cx="450" cy="50" r="10"/>
+                <!-- 6,2 //-->
+                <circle cx="300" cy="400" r="10"/>
+                <!-- 2,4 //-->
+                <circle cx="100" cy="300" r="10"/>
+                <!-- 1,2 //-->
+                <circle cx="50" cy="400" r="10"/>
+
+
+                <rect id="rect" x="0" y="495" width="500px" height="10px"/>
+                <rect id="rect" x="0" y="5" width="10px" height="500px"/>
+            </svg>
+        </div>
+        <div class = "column" id="column2">
+            <div id="x-chord-div">Please select an x-chord 
+                <select id="xSelect">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+              </select>
+          </div>
+
+          <div id="y-chord-div">Please select a y-chord 
+            <select id="ySelect">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+          </select>
+      </div>
+
+      <button type="button" id="button1">Add Point</button>
+  </div>
+</div>
+
+<br>
+
+<h2 class="header">Acknowledgements</h2>
+
+<div id="resources">
+    <ul>
+        <li> <a href="https://www.w3schools.com/js/js_input_examples.asp"></a>https://www.w3schools.com/js/js_input_examples.asp</li>
+    </ul>
+</div>
 
 </body>
+<script src="main.js"></script>
 
 </html>
