--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <svg id="frame">
                 
                 <!-- 9,9 //-->
-                <circle cx="450" cy="50" r="10"/>
+                <circle id="circle-1" cx="450" cy="50" r="10"/>
                 <!-- 6,2 //-->
-                <circle cx="300" cy="400" r="10"/>
+                <circle id="circle-2" cx="300" cy="400" r="10"/>
                 <!-- 2,4 //-->
-                <circle cx="100" cy="300" r="10"/>
+                <circle id="circle-3" cx="100" cy="300" r="10"/>
                 <!-- 1,2 //-->
-                <circle cx="50" cy="400" r="10"/>
+                <circle id="circle-4" cx="50" cy="400" r="10"/>
 
 
                 <rect id="rect" x="0" y="495" width="500px" height="10px"/>
@@ -60,6 +60,7 @@
       </div>
 
       <button type="button" id="button1">Add Point</button>
+      <div id="text-div"></div>
   </div>
 </div>
 
