--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
     <div class="flex-container">
         <div class = "column" id=column1>
             <svg id="frame">
-                
                 <!-- 9,9 //-->
-                <circle id="circle-1" cx="450" cy="50" r="10"/>
+                <circle class = "point" id="(9,9)" cx="450" cy="50" r="10" onclick="show(this); showID('(9,9)');" onmouseover = "hover_over('(9,9)')" onmouseout = "hover_out('(9,9)')"/>
                 <!-- 6,2 //-->
-                <circle id="circle-2" cx="300" cy="400" r="10"/>
+                <circle class = "point" id="(6,2)" cx="300" cy="400" r="10" onclick="show(this); showID('(6,2)');" onmouseover = "hover_over('(6,2)')" onmouseout = "hover_out('(6,2)')" />
                 <!-- 2,4 //-->
-                <circle id="circle-3" cx="100" cy="300" r="10"/>
+                <circle class = "point" id="(2,4)" cx="100" cy="300" r="10" onclick="show(this); showID('(2,4)');" onmouseover = "hover_over('(2,4)')" onmouseout = "hover_out('(2,4)')"/>
                 <!-- 1,2 //-->
-                <circle id="circle-4" cx="50" cy="400" r="10"/>
+                <circle class = "point" id="(1,2)" cx="50" cy="400" r="10" onclick="show(this); showID('(1,2)');" onmouseover = "hover_over('(1,2)')" onmouseout = "hover_out('(1,2)')"/>
 
 
                 <rect id="rect" x="0" y="495" width="500px" height="10px"/>
@@ -58,9 +57,11 @@
               <option>9</option>
           </select>
       </div>
-
       <button type="button" id="button1">Add Point</button>
-      <div id="text-div"></div>
+      <p>Last Point Clicked:</p>
+      <div id="text-div">             
+      </div>
+
   </div>
 </div>
 
@@ -70,7 +71,8 @@
 
 <div id="resources">
     <ul>
-        <li> <a href="https://www.w3schools.com/js/js_input_examples.asp"></a>https://www.w3schools.com/js/js_input_examples.asp</li>
+        <li> <a href="https://www.w3schools.com/js/js_input_examples.asp">https://www.w3schools.com/js/js_input_examples.asp</a></li>
+        <li> <a href="https://stackoverflow.com/questions/21927029/how-do-i-reverse-an-onclick-event-with-another-click">https://stackoverflow.com/questions/21927029/how-do-i-reverse-an-onclick-event-with-another-click</a></li>
     </ul>
 </div>
 
